// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Link/Normal Default - left aligned 1`] = `
.c0 {
  display: inline-block;
}

.c0 .hitWrapper {
  position: relative;
}

.c0 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c1 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #2f313a;
}

.c1 > i.margin-left {
  margin-left: 8px;
}

.c1 > i.margin-right {
  margin-right: 8px;
}

.c1 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 > a {
  color: inherit;
}

.c1:hover {
  color: #2980b9;
}

<div
  className="c0"
>
  <div
    className="hitWrapper"
  >
    <div
      className="c1"
      disabled={false}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      size={16}
      type="#2f313a"
    >
      <a
        href="#"
      >
        Awesome Link
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Link/Normal disabled 1`] = `
.c0 {
  display: inline-block;
}

.c0 .hitWrapper {
  position: relative;
}

.c0 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c1 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: default;
  color: rgba(0,0,0,0.32);
}

.c1 > i.margin-left {
  margin-left: 8px;
}

.c1 > i.margin-right {
  margin-right: 8px;
}

.c1 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 > a {
  color: inherit;
}

.c1:hover {
  color: rgba(0,0,0,0.32);
}

<div
  className="c0"
>
  <div
    className="hitWrapper"
  >
    <div
      className="c1"
      disabled={true}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      size={16}
      type="#2f313a"
    >
      <a
        href="#"
      >
        Awesome Link
      </a>
    </div>
    <div
      className="hit"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots Link/Normal external 1`] = `
.c0 {
  display: inline-block;
}

.c0 .hitWrapper {
  position: relative;
}

.c0 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c1 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #2f313a;
}

.c1 > i.margin-left {
  margin-left: 8px;
}

.c1 > i.margin-right {
  margin-right: 8px;
}

.c1 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 > a {
  color: inherit;
}

.c1:hover {
  color: #2980b9;
}

<div
  className="c0"
>
  <div
    className="hitWrapper"
  >
    <div
      className="c1"
      disabled={false}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      size={16}
      type="#2f313a"
    >
      <a
        href="#"
      >
        Awesome Link
      </a>
      <i
        className="wg-external-link margin-left"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Link/Normal right aligned 1`] = `
.c0 {
  display: inline-block;
}

.c0 .hitWrapper {
  position: relative;
}

.c0 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c1 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #2f313a;
}

.c1 > i.margin-left {
  margin-left: 8px;
}

.c1 > i.margin-right {
  margin-right: 8px;
}

.c1 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 > a {
  color: inherit;
}

.c1:hover {
  color: #2980b9;
}

<div
  style={
    Object {
      "textAlign": "right",
      "width": "500px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="hitWrapper"
    >
      <div
        className="c1"
        disabled={false}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        size={16}
        type="#2f313a"
      >
        <a
          href="#"
        >
          Awesome Link
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Link/Normal with left icon 1`] = `
.c0 {
  display: inline-block;
}

.c0 .hitWrapper {
  position: relative;
}

.c0 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c1 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #2f313a;
}

.c1 > i.margin-left {
  margin-left: 8px;
}

.c1 > i.margin-right {
  margin-right: 8px;
}

.c1 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 > a {
  color: inherit;
}

.c1:hover {
  color: #2980b9;
}

<div
  className="c0"
>
  <div
    className="hitWrapper"
  >
    <div
      className="c1"
      disabled={false}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      size={16}
      type="#2f313a"
    >
      <i
        className="wg-place margin-right }"
      />
      <a
        href="#"
      >
        Awesome Link
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Link/Normal with right icon 1`] = `
.c0 {
  display: inline-block;
}

.c0 .hitWrapper {
  position: relative;
}

.c0 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c1 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #2f313a;
}

.c1 > i.margin-left {
  margin-left: 8px;
}

.c1 > i.margin-right {
  margin-right: 8px;
}

.c1 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 > a {
  color: inherit;
}

.c1:hover {
  color: #2980b9;
}

<div
  className="c0"
>
  <div
    className="hitWrapper"
  >
    <div
      className="c1"
      disabled={false}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      size={16}
      type="#2f313a"
    >
      <a
        href="#"
      >
        Awesome Link
      </a>
      <i
        className="wg-place margin-left }"
      />
    </div>
  </div>
</div>
`;
